Camera actuator shakes with low height #45207

Closed
opened 2015-06-26 21:58:10 +02:00 by lucas veber · 13 comments

System Information
win7 64bit, gtx580

Blender version
Blender 2.74

Short description of error
When the height of the camera actuator is low, if the target object go up the camera starts shaking.

Exact steps for others to reproduce the error

  • Press Enter to jump. Fine, no shakes.
  • Test with lower height values, the background lines will starts vibrating as the camera shakes.

bug.blend

**System Information** win7 64bit, gtx580 **Blender version** Blender 2.74 **Short description of error** When the height of the camera actuator is low, if the target object go up the camera starts shaking. **Exact steps for others to reproduce the error** - Press Enter to jump. Fine, no shakes. - Test with lower height values, the background lines will starts vibrating as the camera shakes. [bug.blend](https://archive.blender.org/developer/F197654/bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber
Author

It seems to be linked with the damping factor.
With very low damping values (0.03), no shakes.
But such a damping leads to very slow camera rotation, wich may not be good for the gameplay.

It seems to be linked with the damping factor. With very low damping values (0.03), no shakes. But such a damping leads to very slow camera rotation, wich may not be good for the gameplay.
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

For my it seems that it is working fine. It simply needs more time to reach an estability position.

For my it seems that it is working fine. It simply needs more time to reach an estability position.
Author

When setting the height value to negative (eg: -3) the camera keeps on shaking, it does not reach stability...

When setting the height value to negative (eg: -3) the camera keeps on shaking, it does not reach stability...
Member

I see. Ok, I confirm the bug.

I see. Ok, I confirm the bug.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

@LucasVeber: I've posted a fix for this in D1387. Do you have the ability to apply this fix & build Blender? If so, please confirm that it has been fixed. Otherwise you'll have to wait until other developers approve this fix, and you can test it using a nightly build after we commit.

@LucasVeber: I've posted a fix for this in [D1387](https://archive.blender.org/developer/D1387). Do you have the ability to apply this fix & build Blender? If so, please confirm that it has been fixed. Otherwise you'll have to wait until other developers approve this fix, and you can test it using a nightly build after we commit.
Author

Sorry building Blender is out of my skills. So i'll wait for the nightly build.

Sorry building Blender is out of my skills. So i'll wait for the nightly build.
Author

anyway thanks for the fix.

anyway thanks for the fix.

This issue was referenced by be07ab58c6

This issue was referenced by be07ab58c66edf7368729c286d2dc6afaf76a4b8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45207
No description provided.